Adicao de paragrafo!

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
+
     <head>
+
     </head>
 
     <body>
-        <h1> Projeto do Marcos Fussa!!!</h1>
+        <h1> Projeto do Marcos Fussa! </h1>
+        <h2> Aplicativo Real</h2>
+        <p> No que consiste esse aplicativo? É um aplicativo de eventos musicais.Mostra o 
+            que esta acontencendo em cada um deles em tempo real. É surpreendente! </p>
     </body>
 </html>
